--- a/task_2_style.css
+++ b/task_2_style.css
@@ -40,6 +40,7 @@ body {
 }
 
 .delivery {
+  background: url(/images/delivery.png) left center no-repeat;
   padding-left: 35px;
   font-weight: 400;
   font-size: 13px;
@@ -49,6 +50,7 @@ body {
 }
 
 .guard {
+  background: url(/images/guard.png) left center no-repeat;
   font-weight: 400;
   font-size: 13px;
   line-height: 123%;
@@ -90,6 +92,10 @@ body {
 }
 
 
+.sidebar {
+   align-self: start;
+}
+
 .ingredients {
   margin-top:  15px;
   border: 1px solid #e7e7e7;
@@ -103,7 +109,7 @@ body {
   color: #4e2d2d;
   margin: 0;
   padding: 13px 148px 13px 42px;
-  background: #fbe8bb url(../images/cheese.svg) left 12px center no-repeat;
+  background: #fbe8bb url(/images/cheese.svg) left 12px center no-repeat;
 }
 
 .ingredients ul {
@@ -199,7 +205,160 @@ body {
   font-size: 14px;
   line-height: 143%;
   color: #fd9339;
-  background: url(../images/orangeIcon.svg) right center no-repeat;
+  background: url(/images/orangeIcon.svg) right center no-repeat;
   padding-right: 10px;
   text-decoration: none;
+}
+
+.footer {
+  background: #fff;
+  padding: 33px 0 31px 0;
+}
+
+.footer-inner {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.payment-info {
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+}
+
+.payment-text {
+  font-weight: 400;
+  font-size: 18px;
+  color: #292929;
+  margin-right: 17px;
+}
+
+.master-card {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  text-indent: 37px;
+  white-space: nowrap;
+  overflow: hidden;
+  background: #e7e7e7 url(/images/master_card.png) center no-repeat;
+  display: inline-block;
+  margin-right: 14px;
+
+}
+
+.visa {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  text-indent: 37px;
+  white-space: nowrap;
+  overflow: hidden;
+  background: #e7e7e7 url(/images/visa.png) center no-repeat;
+  display: inline-block;
+  margin-right: 14px;
+}
+
+.yandex {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  text-indent: 37px;
+  white-space: nowrap;
+  overflow: hidden;
+  background: #e7e7e7 url(/images/yandex.png) center no-repeat;
+  display: inline-block;
+}
+
+.adress {
+  font-weight: 400;
+  line-height: 143%;
+  color: #292929;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.last-added-block {
+  margin-bottom: 97px;
+}
+
+.last-added-title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 125%;
+  letter-spacing: -0.01em;
+  color: #4e2d2d;
+}
+
+.last-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 15px;
+}
+
+.last-card {
+  background: #fff;
+  border: 1px solid #e7e7e7;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  display: grid;
+}
+
+
+
+.last-img-wrapper img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.last-card-info {
+  padding: 20px 20px 0 20px;
+  margin-bottom: 30px;
+  display: grid;
+  align-items: start;
+  grid-auto-flow: row;
+  grid-template-rows: auto 1fr minmax(123px, auto);
+}
+
+.last-card-title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.01em;
+  text-transform: uppercase;
+  color: #4e2d2d;
+  padding: 0;
+  margin: 0 0 2px 0;
+}
+
+.last-card-text {
+  font-weight: 400;
+  line-height: 171%;
+  color: #000;
+  padding: 0;
+  margin: 0;
+}
+
+.card-link-wrapper {
+  padding-left: 20px;
+  padding-bottom: 18px;
+  display: grid;
+  align-items: end;
+  justify-content: start;
+}
+
+.card-link-read {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #fd9339;
+  background: url(/images/last-block-icon.svg) right center no-repeat;
+  padding-right: 15px;
+  display: inline-block;
 }
